bower installed angular flexslider plugin and wiredepped the source code into the index. added the flexslider to the angular dependencies

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.2",
+    "angular": "~1.4.1",
+    "angular-flexslider": "~1.3.2"
+  },
+  "resolutions": {
     "angular": "~1.4.1"
   }
 }
